--- a/src/assets/less/elements/buttons.less
+++ b/src/assets/less/elements/buttons.less
@@ -81,7 +81,7 @@
     &.btn--disabled,
     &.btn--disabled:hover,
     &.btn--disabled:active {
-        cursor: not-allowed;
+        cursor: default;
         opacity: .3;
     }
 
