--- a/docs/assets/css/yoshino-ui-core.css
+++ b/docs/assets/css/yoshino-ui-core.css
@@ -17125,7 +17125,7 @@ a:visited.btn {
 .btn.btn--disabled,
 .btn.btn--disabled:hover,
 .btn.btn--disabled:active {
-  cursor: not-allowed;
+  cursor: default;
   opacity: .3;
 }
 .btn.btn--small {
@@ -24424,57 +24424,31 @@ a.message:hover::after {
   border-radius: 2px;
   background: #faf9f7;
   border: #ecebea 1px solid;
-  height: 2.8rem;
+  height: 3.3rem;
   margin: 1rem 0;
   position: relative;
-  text-align: center;
+  text-align: right;
+  font-size: 0;
 }
-.pagination [class^="icon--"] {
-  font-size: 24px;
-  height: 24px;
-  overflow: hidden;
-  line-height: 20px;
+.pagination__load {
+  float: left;
+  margin: .4rem;
 }
-.pagination__item {
+.pagination__items {
   display: inline-block;
 }
-.pagination__item a {
-  border-radius: 2px;
-  color: #676665;
-  display: block;
-  font-weight: bold;
-  height: 2.4rem;
-  line-height: 2.4rem;
-  margin: 2px 0;
-  padding: 0 1rem;
-  text-decoration: none;
+.pagination__item,
+.pagination__nav {
+  display: inline-block;
+  margin: .4rem;
 }
-.pagination__item a:hover {
+.pagination__item .btn:hover {
   background: #ecebea;
 }
-.pagination__btnPrev,
-.pagination__btnNext {
-  position: absolute;
-  height: 2.4rem;
-  line-height: 2.4rem;
-  padding: 0 1rem;
-  top: 0;
-}
-.pagination__btnPrev {
-  left: 2px;
-}
-.pagination__btnNext {
-  right: 2px;
-}
-.pagination__item--active a,
-.pagination__item--active a:hover {
+.pagination .is--active .btn,
+.pagination .is--active .btn:hover {
   background: #676665;
   color: #f6f5f4;
-}
-.pagination--stripped {
-  background: transparent;
-  border-radius: 0;
-  border: 0;
 }
 /** pieChart.less */
 .pieChart {
