--- a/src/templates/pages/elements/tabs.html
+++ b/src/templates/pages/elements/tabs.html
@@ -21,7 +21,7 @@ This is a basic example. Make sure to **add an #id to each tab** that you refere
         <div class="tabs">
             <div class="tabs__menu">
                 <ul class="tabs__items">
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-1-1-a">Tab #1-a</a>
                     </li>
                     <li class="tabs__item">
@@ -55,7 +55,7 @@ By default, all tabs take up the same with, like cells within in table row. Howe
         <div class="tabs">
             <div class="tabs__menu tabs__menu--loose">
                 <ul class="tabs__items">
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-1-1-b">Tab #1-b</a>
                     </li>
                     <li class="tabs__item">
@@ -92,7 +92,7 @@ Add the modifier `.tabs__menu--large` to the `.tabs__menu`.
                     <li class="tabs__item">
                         <a class="tabs__link" href="#tab-2-1">Tab #1</a>
                     </li>
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-2-2">Tab #2</a>
                     </li>
                     <li class="tabs__item">
@@ -125,7 +125,7 @@ Use the modifier `.tabs__menu--subtle` to create a clean and subtle tab menu.
                 <li class="tabs__item">
                     <a class="tabs__link" href="#tab-7-1">Tab #1</a>
                 </li>
-                <li class="tabs__item tabs__item--active">
+                <li class="tabs__item tabs__item is--active">
                     <a class="tabs__link" href="#tab-7-2">Tab #2</a>
                 </li>
                 <li class="tabs__item">
@@ -155,7 +155,7 @@ Wrap tabs inside a [box element](/pages/elements/boxes.html) if you like.
         <div class="box box--4">
             <div class="tabs__menu tabs__menu--large">
                 <ul class="tabs__items">
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-5-1">Tab 1</a>
                     </li>
                     <li class="tabs__item">
@@ -183,7 +183,7 @@ Add the modifier `.tabs__menu--checkmarks` to the `.tabs__menu` to display a che
         <div class="tabs">
             <div class="tabs__menu tabs__menu--checkmarks tabs__menu--large">
                 <ul class="tabs__items">
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-6-1">Tab 1</a>
                     </li>
                     <li class="tabs__item">
@@ -217,7 +217,7 @@ Yoshino JavaScript is modular. This means, individual scripts expose some functi
                     <li class="tabs__item">
                         <a class="tabs__link" href="#tab-4-1">Tab #1</a>
                     </li>
-                    <li class="tabs__item tabs__item--active">
+                    <li class="tabs__item tabs__item is--active">
                         <a class="tabs__link" href="#tab-4-2">Tab #2</a>
                     </li>
                     <li class="tabs__item">
@@ -247,7 +247,7 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
             <ul class="tabs__items">
-                <li class="tabs__item tabs__item--active">
+                <li class="tabs__item tabs__item is--active">
                     <a class="tabs__link" href="#tab-3a-1">Beschreibung</a>
                 </li>
                 <li class="tabs__item">
@@ -271,7 +271,7 @@ Add the modifier `.tabs__menu--arrows` to the `.tabs__menu` to get an alternativ
     <div class="documentation__example" data-printcode="language:markup; print:true;">
         <div class="tabs__menu tabs__menu--arrows tabs__menu--large">
             <ul class="tabs__items">
-                <li class="tabs__item tabs__item--active">
+                <li class="tabs__item tabs__item is--active">
                     <a class="tabs__link" href="#tab-3b-1">
                         <svg xmlns="http://www.w3.org/2000/svg" width="56" height="56" viewBox="0 0 56 56"><g fill="#1D1D1B"><path d="M30 35.001v-10.001000000000001h-7v4h3v6.001h-3v4h10v-4z"/><circle cx="28" cy="21" r="2.5"/></g><path fill="#1D1D1B" d="M33.5 10h-19v36h27v-28l-8-8zm0 3l5 5h-5v-5zm6 31h-23v-32h15v8h8v24z"/></svg>
                         Beschreibung
