--- a/src/assets/less/elements/tabs.less
+++ b/src/assets/less/elements/tabs.less
@@ -50,7 +50,7 @@
     
 }
 
-.tabs__item--active {
+.tabs__item.is--active {
     
     background: #fff;
     
@@ -114,8 +114,8 @@
 
 // fixed layout: all tabs have the same width
 
-.tabs__menu.tabs__menu--loose {
-
+.tabs__menu--loose {
+    
     font-size: 0;
     
     .tabs__items {
@@ -159,7 +159,7 @@
         background-color: transparent;
     }
    
-    .tabs__item--active {
+    .tabs__item.is--active {
         border-left: @color-main-23 1px solid;
         border-right: @color-main-23 1px solid;
         border-top-left-radius: 1px * @borderRadius;
@@ -173,9 +173,9 @@
 
 // checkmark for highlighting active tabs links
 
-.js .tabs__menu--checkmarks {
+.tabs__menu--checkmarks {
 
-    .tabs__item--active .tabs__link:before {
+    .tabs__item.is--active .tabs__link:before {
         .mixin-icon;
         color: @color-positive-15;
         content: '\f011';
@@ -187,7 +187,7 @@
 // tabs menu with small arrows and no borders
 
 .tabs__menu--arrows {
-
+    
     background: #fff;
     border-radius: 0;
     border: 0;
@@ -213,8 +213,8 @@
 
     }
 
-    .tabs__item--active,
-    .tabs__item--active:hover {
+    .tabs__item.is--active,
+    .tabs__item.is--active:hover {
 
         background: transparent;
         border-bottom-color: @color-main-10;
@@ -229,7 +229,7 @@
 
     }
 
-    .tabs__item--active::after {
+    .tabs__item.is--active::after {
         background: transparent;
         border-color: transparent transparent @color-main-10 transparent;
         border-style: solid;
