--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -51,9 +51,9 @@
 @import "elements/checkList.less";
 @import "elements/countdown.less";
 @import "elements/datePicker.less";
-@import "elements/definitionList.less";
 @import "elements/dock.less";
 @import "elements/documentation.less";
+@import "elements/definitionList.less";
 @import "elements/drawerMenu.less";
 @import "elements/drawers.less";
 @import "elements/filterBtns.less";
@@ -64,11 +64,8 @@
 @import "elements/headings.less";
 @import "elements/hint.less";
 @import "elements/icons.less";
-@import "elements/imgContainer.less";
 @import "elements/imgMagnifier.less";
-@import "elements/indexGroup.less";
-@import "elements/itemShelf.less";
-@import "elements/jumpMenu.less";
+@import "elements/shelf.less";
 @import "elements/link.less";
 @import "elements/linkList.less";
 @import "elements/loading.less";
@@ -106,10 +103,8 @@
 @import "elements/specialLinks.less";
 @import "elements/stage.less";
 @import "elements/stageMenu.less";
-@import "elements/stepIllu.less";
 @import "elements/stepMenu.less";
 @import "elements/stepper.less";
-@import "elements/suggestedBundle.less";
 @import "elements/superHeader.less";
 @import "elements/switch.less";
 @import "elements/tables.less";
