--- a/src/assets/less/yoshino-ui-core.less
+++ b/src/assets/less/yoshino-ui-core.less
@@ -99,4 +99,4 @@
 @import "elements/switch.less";
 @import "elements/tables.less";
 @import "elements/tabs.less";
-@import "elements/toolTip.less";
+@import "elements/tooltip.less";
